--- a/ros/config/move_base_config/costmap_common_params.yaml
+++ b/ros/config/move_base_config/costmap_common_params.yaml
@@ -1,11 +1,11 @@
 obstacle_range: 8.0
 raytrace_range: 10.0
-footprint: [[-0.33, 0.33], [0.33, 0.33], [0.33, -0.33], [-0.33, -0.33]] # TODO: Use correct footprint
-inflation_radius: 0.1
+footprint: [[-0.35, 0.35], [0.35, 0.35], [0.35, -0.35], [-0.35, -0.35]]
+inflation_radius: 0.2
 
 observation_sources: laser_scan_sensor
 laser_scan_sensor:
-    sensor_frame: base_laser_front_link
+    sensor_frame: base_link
     data_type: LaserScan
     topic: /freddy/base_scan_front
     marking: true
